--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ button {
   padding: 8px 14px;
   font-size: 12px;
   border: none;
-  background-color: #059669;
+  background-color: #34d399;
   color: black;
   border-radius: 6px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
